--- a/package.json
+++ b/package.json
@@ -19,16 +19,25 @@
   },
   "homepage": "https://github.com/sushantpaudel/my-website#readme",
   "dependencies": {
+    "@react-three/drei": "^8.19.4",
+    "@react-three/fiber": "^7.0.26",
+    "@reduxjs/toolkit": "^1.8.0",
     "react": "^17.0.2",
+    "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
     "react-jsx": "^1.0.0",
+    "react-redux": "^7.2.6",
     "react-router": "^6.2.2",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
     "three": "^0.139.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "valtio": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/three": "^0.138.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0"
   },
